Add preset memory verses

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
               <button class="btn" id="start-btn" onclick="startGame()">
                 Start
               </button>
+              <br> <br>
+              <span class="card-title">Presets</span>
+              <button class="btn" onclick="startGame(rom1014)">
+                Rom. 10:14-15
+              </button>
+              <button class="btn" onclick="startGame(is536)">
+                Is. 53:6
+              </button>
+              <button class="btn" onclick="startGame(rom58)">
+                Rom. 5:8
+              </button>
             </div>
           </div>
         </div>
